<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">



        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_setting" />


        <item
            android:id="@+id/nav_outputs"
            android:icon="@drawable/ic_remote_24"
            android:title="@string/menuOutputs" />

        <item
            android:id="@+id/nav_zoons"
            android:icon="@drawable/ic_remote_24"
            android:title="@string/menuZoons" />


        <item
            android:id="@+id/nav_inquiry"
            android:icon="@drawable/ic_searched_24"
            android:title="@string/menuInquiry" />



        <item
            android:id="@+id/nav_reminder"
            android:icon="@drawable/ic_baseline_add_alert_24"
            android:title="@string/menu_reminder" />



        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_baseline_help_outline_24"
            android:title="@string/menu_help" />

        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/menu_exit" />
    </group>
</menu>