<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorToolbar"
            android:minHeight="?attr/actionBarSize"
            app:titleTextColor="@color/colorBlack"
            app:title="@string/titleHelp"
            android:paddingLeft="50dp"
            android:theme="?attr/actionBarTheme"
            tools:layout_editor_absoluteX="1dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center|left"
            android:padding="10dp"
            android:rotation="90"
            android:onClick="backPage"
            android:src="@drawable/ic_arrow_down"/>
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="16dp"
                android:fontFamily="@font/farsi"
                android:textColor="@color/colorBlack"
                android:text="@string/AboutUs"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="14dp"
                android:fontFamily="@font/farsi"
                android:textColor="@color/colorBlack"
                android:text="@string/WebsiteUs"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="14dp"
                android:fontFamily="@font/farsi"
                android:textColor="@color/colorBlack"
                android:text="@string/EmailUs"/>



        </LinearLayout>
    </ScrollView>

</LinearLayout>