<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="3dp"
    app:cardElevation="3dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/adapterOutputTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:textSize="14dp"
            android:fontFamily="@font/farsi"
            android:text="@string/titleOutput"
            android:gravity="center"/>

        <Button
            android:id="@+id/adapterOutputMomentary"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:textSize="12dp"
            android:fontFamily="@font/farsi"
            android:textColor="@color/colorWhite"
            android:text="@string/Permanent"
            android:background="@drawable/button_bg"/>

        <Button
            android:id="@+id/adapterOutputPermanent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:textSize="12dp"
            android:fontFamily="@font/farsi"
            android:textColor="@color/colorWhite"
            android:text="@string/momentary"
            android:background="@drawable/button_bg"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>