<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialogs"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:layoutDirection="rtl"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="8dp"
            android:layout_margin="5dp"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="@color/colorGary"
            android:textSize="18sp"
            app:cardBackgroundColor="@color/colorGary"
            app:cardCornerRadius="8dp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:fontFamily="@font/farsi"
            android:text="@string/DoYouChangeLanguage"
            android:textSize="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dialogLanguageChange"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:fontFamily="@font/farsi"
                android:background="@drawable/button_bg"
                android:text="@string/Change"
                android:textColor="@color/colorWhite" />

            <TextView
                android:id="@+id/dialogLanguageClose"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_margin="3dp"
                android:gravity="center"
                android:text="@string/Cancle"
                android:fontFamily="@font/farsi"
                android:textColor="@color/colorGary" />


        </LinearLayout>


    </LinearLayout>


</FrameLayout>


