<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialogs"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:layoutDirection="rtl"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/dialogClose"
            android:layout_width="100dp"
            android:layout_height="6dp"
            android:layout_margin="5dp"
            app:cardCornerRadius="8dp"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="@color/colorGary"
            android:textSize="18sp"
            app:cardBackgroundColor="@color/colorGary" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_remote_conteroller"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:fontFamily="@font/farsi"
                android:textSize="16dp"
                android:textColor="@color/colorGary"
                android:text="@string/RemoteReport"/>

            <Button
                android:id="@+id/dialogReportsRemoteActive"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".8"
                android:textColor="@color/colorWhite"
                android:text="@string/Active"
                android:textSize="12dp"
                android:textStyle="bold"
                android:fontFamily="@font/farsi"
                android:layout_margin="3dp"
                android:background="@drawable/button_bg"/>

            <Button
                android:id="@+id/dialogReportsRemoteDeactive"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".8"
                android:textColor="@color/colorWhite"
                android:text="@string/deActive"
                android:textSize="12dp"
                android:textStyle="bold"
                android:fontFamily="@font/farsi"
                android:layout_margin="3dp"
                android:background="@drawable/button_bg"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_power"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="16dp"
                android:fontFamily="@font/farsi"
                android:textColor="@color/colorGary"
                android:text="@string/PowerReport"/>

            <Button
                android:id="@+id/dialogReportsPowerActive"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".8"
                android:textColor="@color/colorWhite"
                android:text="@string/Active"
                android:textSize="12dp"
                android:textStyle="bold"
                android:fontFamily="@font/farsi"
                android:layout_margin="3dp"
                android:background="@drawable/button_bg"/>

            <Button
                android:id="@+id/dialogReportsPowerDeactive"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".8"
                android:fontFamily="@font/farsi"
                android:textColor="@color/colorWhite"
                android:text="@string/deActive"
                android:textSize="12dp"
                android:textStyle="bold"
                android:layout_margin="3dp"
                android:background="@drawable/button_bg"/>

        </LinearLayout>


    </LinearLayout>


</FrameLayout>


